tests/ui-nightly/transmute-ref-src-dst-not-references.stderr
error[E0308]: mismatched types
  --> tests/ui-nightly/transmute-ref-src-dst-not-references.rs:17:54
   |
17 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                       ---------------^^^^^^-
   |                                       |              |
   |                                       |              expected `&_`, found `usize`
   |                                       expected due to this
   |
   = note: expected reference `&_`
                   found type `usize`
help: consider borrowing here
   |
17 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(&0usize);
   |                                                      +

error[E0308]: mismatched types
  --> tests/ui-nightly/transmute-ref-src-dst-not-references.rs:17:39
   |
17 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-nightly/transmute-ref-src-dst-not-references.rs:17:39
   |
17 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-nightly/transmute-ref-src-dst-not-references.rs:17:39
   |
17 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-nightly/transmute-ref-src-dst-not-references.rs:17:39
   |
17 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-nightly/transmute-ref-src-dst-not-references.rs:17:39
   |
17 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^
   |                                       |
   |                                       expected `usize`, found `&_`
   |                                       arguments to this function are incorrect
   |
   = note:   expected type `usize`
           found reference `&_`
help: the return type of this call is `&_` due to the type of the argument passed
  --> tests/ui-nightly/transmute-ref-src-dst-not-references.rs:17:39
   |
17 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^ this argument influences the return type of `$crate`
note: function defined here
  --> src/macro_util.rs
   |
   | pub const fn must_use<T>(t: T) -> T {
   |              ^^^^^^^^
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
